@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-17T02:04:27Z",
-  "count_outdated" : 402,
-  "uniques_outdated" : 181,
-  "count" : 441,
+  "timestamp" : "2023-07-17T16:27:32Z",
+  "count_outdated" : 410,
+  "uniques_outdated" : 184,
+  "count" : 442,
   "uniques" : 203,
   "clones" : [
-    {
-      "timestamp": "2023-07-03T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 8 ],
-      "count_decinc": [ 0, 8 ],
-      "uniques": 3,
-      "uniques_minmax": [ 3, 3 ],
-      "uniques_decinc": [ 0, 3 ]
-    },
     {
       "timestamp": "2023-07-05T00:00:00Z",
       "count": 4,
@@ -106,9 +97,9 @@
     },
     {
       "timestamp": "2023-07-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
