@@ -1,12 +1,7 @@
 {
-  "count": 39,
-  "uniques": 8,
+  "count": 32,
+  "uniques": 7,
   "clones": [
-    {
-      "timestamp": "2023-07-03T00:00:00Z",
-      "count": 8,
-      "uniques": 3
-    },
     {
       "timestamp": "2023-07-05T00:00:00Z",
       "count": 4,
@@ -59,7 +54,7 @@
     },
     {
       "timestamp": "2023-07-17T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
