@@ -1,3 +1,12 @@
+2023-07-17T16:27:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5578161608 # 614
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
+* notice: last 14d: unq all: 7 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 181 402 / 203 441
+* notice: next accum: outdated-unq outdated-all / unq all: 184 410 / 203 442
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2023-07-03] / [2023-07-17]
+
 2023-07-17T02:04:27Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5571028770 # 612
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-17
